--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span>Does not change appearance of text contained within, but gives the means to select part of a text tags'
             content.</span>
         <p>This is my <span>sentence.</span></p>
-
+        <p>cool site</p>
         <p class="one" id="unique" style="color: red">Attributes go in the starting tag.</p>
         <section>This defines a section, a complete area of the page pertaining to one set of data</section>
         <div>This creates a div, a block of structure for us to use that is not visible to the viewer.</div>
